0705_싱글탭구현

--- a/singleTab/singleTab.html
+++ b/singleTab/singleTab.html
@@ -35,12 +35,32 @@
                             </tr>
                         </tbody>
                     </table>
-
                 </div> <!-- div.tabContents-->
             </div> <!-- div#notice-->
+
             <div id="gallery">
-                갤러리
-            </div>
+                <button type="button" class="tabBtn">갤러리</button>
+                <div class="tabContents">
+
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>
+                                <img src="images/gallery01.jpg" alt="갤러리이미지01" width="120" height="136">
+                                </td>
+                                <td>
+                                <img src="images/gallery02.jpg" alt="갤러리이미지02" width="120" height="136">
+                                </td>
+                                <td>
+                                <img src="images/gallery03.jpg" alt="갤러리이미지03" width="120" height="136">
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div> <!-- div.tabContents-->
+
+            </div> <!-- div#gallery -->
+
             <div id="banner">배너</div>
         </div> <!-- div#contents -->
     </div> <!-- div#wrap -->
